# tacodns

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  ci.yml
adapter/: Cargo.toml  Dockerfile  README.md
adapter/src/: http_authority.rs  main.rs
examples/acme/: docker-compose.yml
examples/acme/ingress/templates/: default.conf.template
examples/acme/zones/com/hichris/whoami/NS/: index.json
examples/acme/zones/io/glowstick/whoami/A/: index.json
examples/dynamic-dns/: README.md  docker-compose.yml
examples/dynamic-dns/ingress/templates/: default.conf.template
examples/dynamicdns/: README.md  docker-compose.yml
examples/dynamicdns/nginx/templates/: default.conf.template
examples/ens/: README.md  docker-compose.yml
examples/json/: README.md  docker-compose.yml
examples/json/nginx/: Dockerfile
examples/json/nginx/templates/: default.conf.template
examples/json/zones/com/example/A/: index.json
examples/json/zones/com/example/TXT/: index.json
gateway/: Cargo.toml  Dockerfile  README.md
gateway/src/: authority.rs  http.rs  main.rs  options.rs
providers/acme/: Cargo.toml
providers/acme/src/: main.rs
providers/dynamic-dns/: Cargo.toml  Dockerfile  README.md
providers/dynamic-dns/src/: main.rs
providers/dynamicdns/: Cargo.toml  Dockerfile
providers/ens/: Dockerfile  index.js  package.json
services/acme-provider/: Dockerfile  README.md
services/dynamicdns-provider/: README.md
services/dynamicdns-provider/src/: main.rs
services/ens-provider/: package-lock.json
(+1 files in other folders)
