[package]
name = "tacodns-gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
trust-dns-server = "0.20.3"
trust-dns-client = "0.20.3"
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.9.0"
futures-util = "0.3.15"
reqwest = { version = "0.11.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "1"
