[package]
name = "tacodns-gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
trust-dns-server = "0.21.2"
trust-dns-proto = "0.21.2"
trust-dns-client = { version = "0.21.2", features = ["dnssec"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.8", features = ["derive", "env"] }
log = "0.4.14"
env_logger = "0.9.0"
futures-util = "0.3.15"
reqwest = { version = "0.11.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "1"
async-trait = "0.1.43"

[dev-dependencies]
httpmock = "0.6"
